fixed rendering on IE
git-svn-id: https://svn.apache.org/repos/asf/incubator/click/trunk/click@777905 13f79535-47bb-0310-9956-ffa450edef68

--- a/extras/src/META-INF/web/click/calendar/red.css
+++ b/extras/src/META-INF/web/click/calendar/red.css
@@ -75,7 +75,7 @@ iframe.ie6_blocker {
   color: white;
 }
 .calendar_date_select .cds_header a {
-  width:22px;
+  width:18px;
   height:20px;
   text-decoration: none;
   font-size:14px;
